<resources>
    <string name="app_name">Saunas</string>
    <string name="city_button_text">Продолжить</string>
    <string name="menu_bottom_catalog">Каталог</string>
    <string name="menu_bottom_favorites">Избранное</string>
    <string name="menu_bottom_selection">Подбор</string>
    <string name="menu_bottom_on_map">На карте</string>
    <string name="menu_bottom_settings">Настройки</string>
    <string name="action_search">Поиск по саунам</string>
    <string name="sauna_of_month">САУНА МЕСЯЦА</string>
    <string name="call_button">Позвонить</string>
    <string name="catalog_title">Каталог саун</string>
    <string name="in_favorite">В избранное</string>
    <string name="share_item">Поделиться</string>
    <string name="conditions">Условия</string>
    <string name="item_sauna_price">Стоимость</string>
    <string name="roominess">Вместительность</string>
    <string name="item_sauna_minimum_time">Минимальное время</string>
    <string name="item_working_hours">Время работы</string>
    <string name="item_description">Описание</string>
    <string name="item_rent">Аренда банных принадлежностей:</string>
    <string name="take_review">Оставить отзыв</string>
    <string name="item_review">Отзывы</string>
    <string name="item_saunas_beside">Сауны рядом</string>
    <string name="no_reviews">У сауны нет отзывов, ваш может стать первым!</string>
    <string name="like">Доволен</string>
    <string name="dislike">Не доволен</string>
    <string name="review_name">Имя:</string>
    <string name="review_email">E-mail:</string>
    <string name="review_phone">Телефон:</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="cancel">Отменить</string>
    <string name="review">Отзыв</string>
    <string name="send">Отправить</string>
    <string name="price_in_hour">Цена в час</string>
    <string name="select_array">Выбор района</string>
    <string name="type_room">Тип парной</string>
    <string name="comfort">Удобства</string>
    <string name="additional_services">Дополнительные удобства</string>
    <string name="accessories">Аксессуары</string>
    <string name="show_offers">Показать предложения</string>
    <string name="alert_dialog_politic">Отправляя отзыв вы даете свое согласие на обработку персональных данных \n
    Подробнее о политике конфиденциальности можно узнать по адресу: http://kursk.saunagoroda.ru/privacy_policy</string>
    <string name="reset">Сбросить</string>
    <string name="receive_promotions">Получать уведомления об акциях</string>
    <string name="receive_notifications">Получать уведомления о новых саунах</string>
    <string name="city">Город:</string>
    <string name="title_activity_maps">Map</string>
    <string name="promotions">Акции</string>
    <string name="on_map">На карте</string>
</resources>
