<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/review_bar_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/action_bar_yellow"
        android:text="@string/cancel"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/review_bar_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/review"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/review_bar_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/action_bar_yellow"
        android:text="@string/send"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>