<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/review_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/review_like_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/review_like_image"
                android:layout_width="13dp"
                android:layout_height="14dp"
                android:layout_marginStart="20dp"
                android:contentDescription=""
                android:tint="@color/text_gray"
                android:src="@drawable/review_like"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/review_like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="10dp"
                android:text="@string/like"
                android:textColor="@color/text_gray"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/review_dislike_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/review_dislike_image"
                android:layout_width="13dp"
                android:layout_height="14dp"
                android:layout_marginStart="20dp"
                android:contentDescription=""
                android:tint="@color/text_gray"
                android:src="@drawable/review_dislike"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/review_dislike_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="10dp"
                android:text="@string/dislike"
                android:textColor="@color/text_gray"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/review_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <TextView
        android:id="@+id/review_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/review_name"
        android:textColor="@color/text_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <EditText
        android:id="@+id/review_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/white"
        android:inputType="textPersonName"
        android:ems="10"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/review_name_text"
        app:layout_constraintTop_toBottomOf="@+id/review_view"/>

    <View
        android:id="@+id/review_view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view"/>

    <TextView
        android:id="@+id/review_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/review_email"
        android:textColor="@color/text_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view1"/>

    <EditText
        android:id="@+id/review_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/review_email_text"
        app:layout_constraintTop_toBottomOf="@+id/review_view1"/>

    <View
        android:id="@+id/review_view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view1"/>

    <TextView
        android:id="@+id/review_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/review_phone"
        android:textColor="@color/text_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view3"/>

    <EditText
        android:id="@+id/review_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:inputType="phone"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/review_phone_text"
        app:layout_constraintTop_toBottomOf="@+id/review_view3"/>

    <View
        android:id="@+id/review_view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view3"/>

    <EditText
        android:id="@+id/review_your_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:hint="@string/your_review"
        android:inputType="textMultiLine"
        android:maxLines="30"
        android:textColor="@color/black"
        android:textColorHint="@color/text_gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_view4"/>

</android.support.constraint.ConstraintLayout>